<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment_2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/baseline_arrow_back_24"
                app:title="@string/appBarTitle"
                app:titleCentered="true">

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/pregunta"
            android:textColor="@color/seed"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:checkedButton="@+id/radio_button_1">

            <RadioButton
                android:id="@+id/radioLays"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/lays" />

            <RadioButton
                android:id="@+id/radioPringles"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pringles" />

            <RadioButton
                android:id="@+id/radioMarco"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/marco_polo" />

            <RadioButton
                android:id="@+id/radioKryzpo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/kryzpo" />

        </RadioGroup>

        <Button
            android:id="@+id/btnComprobar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/comprobar" />
    </LinearLayout>

</FrameLayout>